# torch_googletest_bug

./: CMakeLists.txt  README.md  simple_test.cc
